--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,10 +1,10 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-12 fondoFoto pointer" (click)="openaVenta()">
+            <div class="col-12 pointer" (click)="openaVenta()">
             </div>
             <div class="col">
-                <p class="text-white nav-link">Copyright © 2017-2020 todos los derechos reservados LOCOMPROAQUI.COM soporte software <a href="https://dilisoftgroup.com/" target="_blank" class="text-white">Dilisoft Software</a></p>
+                <p class="text-white nav-link">Copyright © 2017-2020 todos los derechos reservados ZOEBODEGA.COM soporte software <a href="https://dilisoftgroup.com/" target="_blank" class="text-white">Dilisoft Software</a></p>
             </div>
             <div>
                 <a href="https://wa.me/573148487506?text=Hola Servicio al cliente, como esta, saludo cordial" class="text-white nav-link" target="_blank">Contactos</a>
