--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
     <button mat-icon-button (click)="snav.toggle()" translate="no">
       <i class="material-icons">menu</i>
     </button>
-    <h5 class="textInf"><span class="textInf">locomproaqui.com</span></h5>
+    <h5 class="textInf"><span class="textInf">zoebodega.com</span></h5>
     <div class="row col">
       <div class="col"></div>
       <div style="margin-top: 7px;">
@@ -21,7 +21,7 @@
     <div class="col-12">
       <h4> 
         <p *ngIf="dataUser.id" class="text-center textInf">BIENVENIDO A TU OFICINA VIRTUAL " {{ dataUser.usu_nombre }} "</p> 
-        <p *ngIf="!dataUser.id" class="text-center textInf">BIENVENIDO A LOCOMPROAQUI.COM {{ userId.usu_nombre }} </p>
+        <p *ngIf="!dataUser.id" class="text-center textInf">BIENVENIDO A zoebodega ZOEBODEGA.COM {{ userId.usu_nombre }} </p>
       </h4>
     </div>
   </mat-toolbar>
