--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>
-    <span *ngIf="disableRestarure"> Iniciar Sesión en locomproaqui.com </span>
-    <span *ngIf="!disableRestarure"> Recuperacion Contraseña en locomproaqui.com </span>
+    <span *ngIf="disableRestarure"> Iniciar Sesión en zoebodega.com </span>
+    <span *ngIf="!disableRestarure"> Recuperacion Contraseña en zoebodega.com </span>
 </h2>
 
 <mat-dialog-content class="mat-typography">
