--- a/src/app/components/menu-lateral/menu-lateral.component.html
+++ b/src/app/components/menu-lateral/menu-lateral.component.html
@@ -6,10 +6,10 @@
     matTooltip="Siguenos en Facebook" class="icon icon-facebook" target="_blank">
       <img src="./assets/icons/facebook.png" alt="" class="altosIcons">
     </a>
-    <a [href]="urlYoutube"
+    <!-- <a [href]="urlYoutube"
     matTooltip="Siguenos en Youtube" class="icon icon-youtube" target="_blank">
       <img src="./assets/icons/youtube.png" class="altosIcons">
-    </a>
+    </a> -->
     <a [href]="urlInstagram"
     matTooltip="Siguenos en Instagram" class="icon icon-instagram" target="_blank">
       <img src="./assets/icons/instagram.png" class="altosIcons">
