--- a/src/app/dashboard-config/form/formventas/formventas.component.html
+++ b/src/app/dashboard-config/form/formventas/formventas.component.html
@@ -1,13 +1,13 @@
 <h2 mat-dialog-title>{{ titulo }} Ventas</h2>
 <mat-dialog-content class="mat-typography">
     <div class="form row">
-        <div class="form-group col-md-6 col-sm-4 col-lg-4 col-xs-6">
+        <!-- <div class="form-group col-md-6 col-sm-4 col-lg-4 col-xs-6">
             <label for="exampleFormControlSelect1">Tipo de Venta</label>
             <select class="form-control form-control-sm" [(ngModel)]="data.ven_tipo">
                 <option value="carrito">Carrito</option>
                 <option value="whatsapp">Whatsapp</option>
             </select>
-        </div>
+        </div> -->
         <div class="form-group col-md-6 col-sm-4 col-lg-4 col-xs-6" *ngIf="data.id && superSub">
             <label for="exampleFormControlSelect1">Estado de la Venta</label>
             <select class="form-control form-control-sm" [(ngModel)]="data.ven_estado">
