--- a/src/app/components/pedidos/pedidos.component.html
+++ b/src/app/components/pedidos/pedidos.component.html
@@ -16,7 +16,7 @@
         <div class="col-12">
             <div class="contenedor">
                 <div class="table-responsive">
-                    <div style="width: 1077px; height: 35px;">
+                    <div style="width: 80pc; height: 35px;">
                         <a *ngFor="let item of imageObject;let idx=index" href="#" (click)="imageOnClick(idx, item);"
                             class="estiloCategoria" [ngClass]="{ 'cambiaColor': item.check == true }">
                             {{ item.title }}
